# BlobForge

./: .dockerignore  .gitignore  AGENTS.md  Containerfile  DESIGN.md  Dockerfile  README.md  TODO.md  cli.py  config.py  docker-compose.yml  ingestor.py  janitor.py  pyproject.toml  s3_client.py  status.py  worker.py
.github/workflows/: container.yml  release-on-bunny.yml
assets/: lorem.md
blobforge/: __init__.py  cli.py  config.py  conversion_child.py  coordinator_client.py  coordinator_migration.py  db.py  hydrator.py  ingestor.py  janitor.py  s3_client.py  status.py  telegram_bot.py  utils.py  worker.py
blobforge/migrations/: 001_initial.sql
bunny/: .env.example  package-lock.json  package.json  tsconfig.json
bunny/scripts/: generate-markdown.mjs
bunny/src/: app.ts  database.ts  docs_ui.ts  index.ts  management_ui.ts  markdown_runtime.ts  object_store.ts  ui.ts
bunny/test/: coordinator.spec.ts  markdown_runtime.spec.ts  object_store.spec.ts
cli/: README.md  blobforge.py
cloudflare/: package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
cloudflare/src/: index.ts
cloudflare/test/: coordinator.spec.ts
docs/: WORK_LOG.md  bunny_coordination_backend.md  cloudflare_coordination_backend.md  dependency_security.md  edge_backend_evaluation.md  hydrate_command.md  linux_worker_setup.md  raw_metadata_repair.md  worker_conversion_timeout.md  worker_graceful_shutdown.md  worker_schedule.md  worker_startup_recovery.md
scripts/: install-linux-worker.sh
server/: Containerfile  README.md  go.mod  go.sum  litestream.yml  main.go  run.sh
server/api/: handlers.go  handlers_test.go
server/auth/: auth.go
server/cmd/blobforge/: main.go
server/data/: blobforge.db
server/db/: db.go  db_test.go  migrations.go
server/s3/: s3.go
server/sse/: sse.go
server/web/: web.go  web_test.go
server/web/static/: app.js  style.css
server/web/templates/: admin.html  base.html  dashboard_new.html  job_detail.html  job_row.html  jobs.html  jobs_table.html  stats_cards.html  tokens.html  worker_row.html  workers.html  workers_new.html  workers_table.html
tests/: __init__.py  test_blobforge.py  test_coordinator_client.py  test_dependency_security.py  test_hydrator.py  test_ingest_logging.py  test_legacy_cleanup.py  test_worker_recovery.py  test_worker_runtime.py  test_worker_shutdown.py  test_xattr_hashing.py
workers/pdf/: Containerfile  README.md  pyproject.toml  worker.py
