[project]
name = "blobforge"
version = "0.1.0"
description = "Distributed PDF conversion system using S3 as the coordination layer"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "BlobForge Contributors" }
]
keywords = ["pdf", "conversion", "distributed", "s3", "markdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    "boto3>=1.28.0",
]

[project.optional-dependencies]
convert = [
    "marker-pdf>=0.2.0",
]
metrics = [
    "psutil>=5.9.0",
]
dev = [
    "pytest>=7.0.0",
    "psutil>=5.9.0",
]
all = [
    "marker-pdf>=0.2.0",
    "psutil>=5.9.0",
]

[project.scripts]
blobforge = "blobforge.cli:main"

[project.urls]
Repository = "https://github.com/tionis/BlobForge"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["blobforge"]
