[project]
name = "blobforge"
version = "0.1.0"
description = "Distributed PDF conversion system with managed coordination and object storage"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "BlobForge Contributors" }
]
keywords = ["pdf", "conversion", "distributed", "s3", "markdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    "boto3>=1.28.0",
]

[project.optional-dependencies]
convert = [
    "marker-pdf>=0.2.0",
]
metrics = [
    "psutil>=5.9.0",
]
xattr = [
    "xattr>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "psutil>=5.9.0",
    "xattr>=1.0.0",
]
all = [
    "marker-pdf>=0.2.0",
    "psutil>=5.9.0",
    "xattr>=1.0.0",
]

[project.scripts]
blobforge = "blobforge.cli:main"

[project.urls]
Repository = "https://github.com/tionis/BlobForge"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["blobforge"]

# Keep the universal lockfile above the patched version for every supported
# Python/platform resolution. Pillow is an override because marker-pdf 1.10.2
# still caps it below the first patched release.
[tool.uv]
constraint-dependencies = [
    "cryptography>=48.0.1",
    "filelock>=3.20.3",
    "idna>=3.15",
    "pyasn1>=0.6.3",
    "pydantic-settings>=2.14.2",
    "pygments>=2.20.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "scikit-learn>=1.5.0",
    "soupsieve>=2.8.4",
    # 2.10 fixes the reachable sequence APIs while retaining CUDA 12 worker
    # compatibility; the remaining jit.script advisory is not used here.
    "torch==2.10.0",
    "urllib3>=2.7.0",
]
override-dependencies = [
    "pillow>=12.2.0",
]
